[gd_scene load_steps=96 format=3 uid="uid://2khegxjt2sge"]

[ext_resource type="Texture2D" uid="uid://brjwq3qwttxi" path="res://assets/Image/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://sijoxyauulai" path="res://Entities/player/player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://bc7vvfrmkdd15" path="res://Entities/player/camera_2d.gd" id="2_ebec5"]
[ext_resource type="Texture2D" uid="uid://yk8x62f8uga8" path="res://assets/Image/Factions/Knights/Troops/Dead/Dead.png" id="2_g1dw6"]
[ext_resource type="PackedScene" uid="uid://c8v4rsx6a51yo" path="res://Entities/player/heart.tscn" id="4_yw30f"]
[ext_resource type="Script" uid="uid://d3hkbwoic0hox" path="res://UI/Script/player_stat_ui.gd" id="5_8t03j"]
[ext_resource type="PackedScene" uid="uid://cck6ejbbut60o" path="res://UI/Inventory/Inventory_UI.tscn" id="6_ebec5"]
[ext_resource type="FontFile" uid="uid://bluohanf8106y" path="res://assets/Image/UI/Font/GeekbleMalang2TTF.ttf" id="7_rgyib"]
[ext_resource type="Texture2D" uid="uid://c10mpwm2nsl6g" path="res://assets/Tiny Swords (Free Pack)/UI Elements/UI Elements/Icons/Icon_05.png" id="7_v3hes"]
[ext_resource type="Texture2D" uid="uid://df445dbm2m52e" path="res://assets/Tiny Swords (Free Pack)/UI Elements/UI Elements/Icons/attack_speedt.png" id="9_v3hes"]
[ext_resource type="Texture2D" uid="uid://yvnx1eblejc2" path="res://assets/Tiny Swords (Free Pack)/Units/Black Units/Archer/Arrow.png" id="10_5udp2"]
[ext_resource type="Texture2D" uid="uid://68eug8cjicig" path="res://assets/Tiny Swords (Free Pack)/UI Elements/UI Elements/Icons/Icon_03.png" id="11_pgwtq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("2_g1dw6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("2_g1dw6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("2_g1dw6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("2_g1dw6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("2_g1dw6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_g1dw6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_g1dw6")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("2_g1dw6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("2_g1dw6")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_g1dw6")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("2_g1dw6")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("2_g1dw6")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("2_g1dw6")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("2_g1dw6")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("1_4flbx")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("1_4flbx")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("1_4flbx")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("1_4flbx")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6w8y"]
resource_name = "blue"
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}],
"loop": false,
"name": &"dead",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": false,
"name": &"down_attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}],
"loop": false,
"name": &"down_attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}],
"loop": false,
"name": &"left_attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}],
"loop": false,
"name": &"left_attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": false,
"name": &"right_attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": false,
"name": &"right_attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}],
"loop": false,
"name": &"up_attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}],
"loop": false,
"name": &"up_attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v3hes"]
radius = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yllr7"]
radius = 13.0
height = 34.481186

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebec5"]
radius = 11.155678
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fddr8"]
radius = 9.12737
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkbax"]
size = Vector2(145, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1dw6"]
size = Vector2(63, 120.68416)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw30f"]
size = Vector2(145, 73)

[sub_resource type="LabelSettings" id="LabelSettings_8t03j"]
line_spacing = 0.0
font = ExtResource("7_rgyib")
font_size = 20
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
scale = Vector2(1, 0.986045)
collision_mask = 67
script = ExtResource("1_onrkg")
Crescent_Slash = true

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_ebec5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_h6w8y")
animation = &"idle"
offset = Vector2(0, -20)

[node name="AttackRange" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="AttackRangeCollision" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_v3hes")

[node name="HitBoxArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(0, -14.198135)
shape = SubResource("CapsuleShape2D_yllr7")

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, 5.0707626)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ebec5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.141525)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_fddr8")

[node name="AttackCollision" type="Area2D" parent="." groups=["Player_attack"]]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="DownAttack" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2(9, 35.49534)
shape = SubResource("RectangleShape2D_rkbax")
disabled = true

[node name="RightAttack" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2(63.5, -15.719366)
shape = SubResource("RectangleShape2D_g1dw6")
disabled = true

[node name="LeftAttack" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2(-60, -14.198135)
shape = SubResource("RectangleShape2D_g1dw6")
disabled = true

[node name="UpAttack" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2(6.5, -62.659306)
shape = SubResource("RectangleShape2D_yw30f")
disabled = true

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_8t03j")

[node name="InventoryUi" parent="UI" instance=ExtResource("6_ebec5")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StatUI" type="Control" parent="UI/PlayerUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/PlayerUI/StatUI"]
layout_mode = 0
offset_left = 28.0
offset_top = 602.0
offset_right = 119.0
offset_bottom = 682.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/PlayerUI/StatUI/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect2" type="TextureRect" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("7_v3hes")
expand_mode = 2

[node name="Damage" type="Label" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer3"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 2
size_flags_vertical = 0
text = "NULL"
label_settings = SubResource("LabelSettings_8t03j")

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/PlayerUI/StatUI/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect2" type="TextureRect" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("9_v3hes")
expand_mode = 2

[node name="attack_speed" type="Label" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer4"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 2
size_flags_vertical = 0
text = "NULL"
label_settings = SubResource("LabelSettings_8t03j")

[node name="HBoxContainer5" type="HBoxContainer" parent="UI/PlayerUI/StatUI/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect2" type="TextureRect" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
texture = ExtResource("10_5udp2")
expand_mode = 2

[node name="range" type="Label" parent="UI/PlayerUI/StatUI/VBoxContainer2/HBoxContainer5"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 2
size_flags_vertical = 0
text = "NULL"
label_settings = SubResource("LabelSettings_8t03j")

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/PlayerUI/StatUI"]
layout_mode = 0
offset_left = 28.0
offset_top = 83.0
offset_right = 119.0
offset_bottom = 107.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 0

[node name="TextureRect2" type="TextureRect" parent="UI/PlayerUI/StatUI/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("11_pgwtq")
expand_mode = 2

[node name="current_gold" type="Label" parent="UI/PlayerUI/StatUI/HBoxContainer4"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 2
size_flags_vertical = 0
text = "NULL"
label_settings = SubResource("LabelSettings_8t03j")

[node name="Hearts" type="HBoxContainer" parent="UI/PlayerUI"]
layout_mode = 0
offset_left = 49.0
offset_top = 48.0
offset_right = 102.000015
offset_bottom = 88.000015
scale = Vector2(3, 3)

[node name="Heart" type="TextureRect" parent="UI/PlayerUI/Hearts"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="heart" parent="UI/PlayerUI/Hearts/Heart" instance=ExtResource("4_yw30f")]

[node name="Heart2" type="TextureRect" parent="UI/PlayerUI/Hearts"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="heart" parent="UI/PlayerUI/Hearts/Heart2" instance=ExtResource("4_yw30f")]

[node name="Heart3" type="TextureRect" parent="UI/PlayerUI/Hearts"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="heart" parent="UI/PlayerUI/Hearts/Heart3" instance=ExtResource("4_yw30f")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
[connection signal="area_entered" from="AttackCollision" to="." method="_on_attack_collision_area_entered"]
[connection signal="timeout" from="HitFlashTimer" to="." method="_on_hit_flash_timer_timeout"]
